2007-02-06  Tom Tromey  <tromey@redhat.com>

	PR libgcj/30707:
	* tools/gnu/classpath/tools/javah/JniIncludePrinter.java
	(printClass): Always print a header.

2007-02-06  Chris Burdess  <dog@gnu.org>

	Fixes PR 27710.
	* gnu/xml/dom/DomDocumentBuilderFactory.java: Fall back to synchronous
	  LSParser if implementation does not support asynchronous.
	* gnu/xml/stream/XMLParser.java,
	  gnu/xml/stream/XIncludeFilter.java: Use custom code instead of
	  java.net.URL to resolve to an an absolute URI, to avoid nonexistent
	  protocol handler problems.

2007-02-05  Andrew Haley  <aph@redhat.com>

        PR cp-tools/30706
        * tools/gnu/classpath/tools/javah/JniIncludePrinter.java:
        (printClass): Replace '/' in filenames with '_'.
        * tools/gnu/classpath/tools/javah/JniStubPrinter.java
        (printClass): Likewise.

2007-02-05  Tom Tromey  <tromey@redhat.com>

	* java/net/Proxy.java (equals): Handle case where address==null.
	(hashCode): Likewise.
	(toString): Likewise.

2007-02-04  Jeroen Frijters  <jeroen@frijters.net>

	* java/lang/Class.java
	(newInstance): Moved setAccessible call to helper method.
	(getEnumConstants): Call new helper method to allow values method to be
	called on non-public enum classes.
	(setAccessible): New helper method.
	* java/lang/Enum.java
	(valueOf): Call new helper method in class to allow field value to
	be read on non-public enum classes.

2007-02-04  Jeroen Frijters  <jeroen@frijters.net>

	Fix for #30693
	* gnu/java/nio/charset/ByteCharset.java
	(ByteCharset.Decoder.decodeLoop): Reset input buffer position if
	the byte read was unmappable.

2007-02-02  Kyle Galloway  <kgallowa@redhat.com>

	* gnu/classpath/jdwp/processor/StackFrameCommandSet.java
	(executeGetValues): Changed getFrame to use a jlong to pass frameID.
	(executeSetValues): Ditto.
	(executeThisObject): Ditto.
	* vm/reference/gnu/classpath/jdwp/VMFrame.java: Added thread field and a
	constructor used to create VMFrames.
	(getThread): New method.